# ShellyDataFetcher

./: Cargo.toml  Dockerfile
src/: main.rs  shelly_datapoint.rs  shelly_response.rs  sun_datapoints.rs
