[package]
name = "shell_data_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb = { version = "0.6.0", features = ["influxdb_derive", "serde", "derive", "default", "reqwest-client"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.155"
serde_json = "1.0.94"
chrono = "0.4.24"
tokio = { version = "1.24.0", features = ["full"] }
