[package]
name = "shell_data_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb = { version = "0.7.1", features = ["influxdb_derive", "serde", "derive", "default", "reqwest-client"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.107"
chrono = "0.4.31"
tokio = { version = "1.32.0", features = ["full"] }
